--- a/README
+++ b/README
@@ -10,8 +10,8 @@ g) Scalar Triple Product
 The logic for the project was written in Python, using the Numpy and Tkinter (GUI) libraries.
 
 1) Necessary installations (assuming Python is installed):  
-  a) Windows: `pip install numpy tk`
-  b) Linux or Mac: `pip3 install numpy tk`
+  a) Windows: `pip install numpy, tk`
+  b) Linux or Mac: `pip3 install numpy, tk`
 
 2) To run the code, open the terminal in the folder where you cloned this project and execute:
   a) Windows: `python main.py`
